--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.14.1",
     "@nuxtjs/composition-api": "^0.33.1",
     "bootstrap": "^5.3.3",
+    "npm": "^10.4.0",
     "nuxt": "^3.10.3",
+    "swiper": "^11.0.7",
     "v-owl-carousel": "^1.0.8",
     "vue": "^3.4.19",
+    "vue-ai-carousel": "^1.1.1",
+    "vue-infinite-slide-bar": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.3.0"
